# XCompEvolution

./: Makefile.am  README  README.md  configure.ac  xcompevolution.c
man/: Makefile.am  xcompevolution.man
